2010-10-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Don't free script->result.

2010-10-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Typo.

2010-10-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/fileheader.c (parse_file_header): Print buf.
	* patching file recover-src/extract_list.c: Read header in multiple
						    block.

2010-10-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Use chunker size to find big estimate.
	* installcheck/catalogs/bigestimate.cat: Fix.

2010-10-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Use 4*block_size for
	  device_output_buffer_size if it is not set by the user.
	* server-src/amcheck-device.pl: Check device_output_buffer_size is at
	  least 2*block_size.

2010-10-25 Dan Locks <dwlocks@zmanda.com>
	*  config/amanda/libs.m4: update AMANDA_CHECK_CURL to add runtime link
	   flags for all solaris platforms, remove our AC_PATH_PROG for curl-config,
	   and trust LIBCURL_CHECK_CONFIG (which is now fixed)

2010-10-25 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec.src: exclude sles9 from
	   LDFLAGS=-Wl,--as-needed

2010-10-21 Dan Locks <dwlocks@zmanda.com>

2010-10-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Typo.

2010-10-19 Dan Locks <dwlocks@zmanda.com>
	*  packaging/deb/rules, packaging/rpm/amanda.spec.src: add
	   -Wl,--as-needed to ./configure invocation in packages

2010-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* ReleaseNotes NEWS: amdump --no-taper option.

2010-10-18  Jean-Louis Martineau <martineau@zmanda.com>
	* VERSION: 3.2.0

2010-10-18  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Give an error if client property
	  pg-datadir is different than diskdevice. Use diskdevice if client
	  property pg-datadir is not set.

2010-10-17  Jean-Louis Martineau <martineau@zmanda.com>